# pollstats

./: .gitignore  Cargo.toml  README.md  requirements.txt
config/: pollstats.toml  pollstats.yaml  sources.toml  sources.yaml
data/: estimate-voting-age-pop.csv  votes-cast-for-pres-elect.csv  votes-cast-for-reps.csv
scripts/: pollstats.py
sql/: pollstats.sql
src/: main.rs
