[package]
name = "pollstats"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
hex = "0.4.3"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "gzip", "brotli", "deflate", "stream"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
time = { version = "0.3.47", features = ["formatting"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7.17"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
urlencoding = "2.1.3"
